--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,12 @@ text-align: center;
 margin: 0 auto;
 
 }
+#cabecera{
+    background: #FF8533;
+    color: cornsilk;
+    font-weight: 900;
+    font-size: 55px;
+    padding: 20px;
+    text-align: left;
+    
+}
